# se-contract-kit

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  DECISIONS.md  LICENSE  MANIFEST.toml  README.md  pyproject.toml  rel.ps1  shape.ps1  zensical.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  pre-release.yml  python-315-ready.yml  release-pypi.yml
docs/: index.md
docs/en/: api.md  architecture.md  commands.md  contribution-workflow.md  glossary.md  index.md
src/se_contract_kit/: __init__.py  cli.py
src/se_contract_kit/base/: __init__.py  errors.py  io.py  json_utils.py  paths.py
src/se_contract_kit/commands/: check.py
src/se_contract_kit/declarations/: __init__.py  config.py  contracts.py  manifests.py
src/se_contract_kit/resolution/: __init__.py  artifacts.py  authorities.py  context.py  dependencies.py  lockfile.py  resolver.py
src/se_contract_kit/validation/: __init__.py  defaults.py  registry.py  results.py  runner.py
src/se_contract_kit/validation/checks/: __init__.py  authority.py  constraints.py
src/se_contract_kit/validation/checks/structural/: schemas.py  source.py  strict.py
tests/: test_base.py  test_declarations.py  test_resolution.py  test_validation.py
