# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================
# Updated: 2026-05-34
# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.
# CUSTOM: Update identity and build tool src folders.

# ============================================================
# SECTION 1: PROJECT IDENTITY (name, version, CUSTOM dependencies)
# ============================================================

[project]
name = "se-contract-kit" # Package distribution name (lowercase and dashes).
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"] # WHY: Version is computed from git tags at build time
description = "Generic contract loading, resolution, and validation machinery for Structural Explainability contract repositories."
license = { file = "LICENSE" }
authors = [
    { name = "Structural Explainability", email = "se@structural-explainability.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
keywords = [
    "structural-explainability",
    "contract-resolution",
    "contract-validation",
    "authority-resolution",
    "dependency-resolution",
    "validation",
]
dependencies = [
    "se-manifest-schema",
]

[project.optional-dependencies]
# WHY: Optional dependency groups keep the core install clean and focused.
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "build", # WHY: build tool required for packaging and publishing.
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
    "PyYAML", # WHY: Used for testing manifest parsing logic with YAML fixtures.
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "zensical", # WHY: Link resolution fails with newer versions; pinning to a known working version.
]

[project.scripts]
# WHY: Single public CLI for this contract repo.
# It checks repository artifacts and synchronizes manifest metadata.
# It is not the Accountable Record verifier implementation.
se-contract-kit = "se_contract_kit.cli:main"

# ============================================================
# SECTION 2: TOOL CONFIGURATION (Professional basics)
# ============================================================

# === PYRIGHT (TYPE CHECKING HELPS FIND COMMON ERRORS BEFORE THE CODE RUNS) ===

[tool.pyright]
# CUSTOM: Pyright configuration for static type checking.
# WHY: Strict type checking helps catch bugs early.
include = ["src", "tests"] # WHY: Type-check both source and tests.
extraPaths = ["src"] # WHY: Resolve imports relative to src/ for consistent behavior across environments.
exclude = ["**/node_modules", "**/.*", ".venv", "**/__pycache__", "dist", "build"]
pythonVersion = "3.14"
reportMissingTypeStubs = "none" # WHY: Avoid warnings from third-party libraries without type stubs.
reportPrivateUsage = "none" # WHY: Allow usage of private members (e.g., _version.py), common in Python projects.
typeCheckingMode = "strict" # strict | basic | off


[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"

# === PYTEST (VERIFY LOGIC) ===

[tool.pytest.ini_options]
# WHY: Consistent test discovery and coverage visibility.
minversion = "9.0"
testpaths = ["tests"]
addopts = "--cov=se_contract_kit --cov-report=term-missing --cov-fail-under=70"

# === RUFF (PYTHON FORMATTING AND LINTING) ===

[tool.ruff]
# WHY: Fast linting and formatting in one tool.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88 # WHY: PEP 8 standard, wrap when possible.
preview = false # WHY: Stable features only; avoid preview features.
target-version = "py314" # WHY: match latest supported Python version.
unsafe-fixes = false # WHY: Avoid potentially unsafe automatic fixes.

[tool.ruff.format]
# WHY: Formatter choices should be stable to keep diffs small and predictable.
indent-style = "space" # See also .gitattributes for indent style.
line-ending = "auto" # Match existing files and let .gitattributes handle it.
quote-style = "preserve" # Preserve existing quote styles to minimize churn.

[tool.ruff.lint]
# WHY: Baseline + stricter categories:
select = [
    "E",  # Basic syntax and structural correctness
    "F",  # Undefined names and unused imports
    "W",  # Warnings that catch easy issues early
    "I",  # Deterministic import ordering
    "UP", # Modern Python constructs
    "B",  # Common bug patterns

    "PTH", # Prefer pathlib patterns
    "C4",  # Comprehension correctness and clarity
    "SIM", # Simplify obvious complexity
    "RET", # Return practices

    "D", # Docstring standards (see convention below)
    "S", # Security checks (with deliberate exceptions)
]
ignore = [
    "E501", # line length handled by formatter
    "D203", # conflicts with D211
    "D213", # conflicts with D212 (Google standard summary placement)
    "S101", # allow assert (tests + internal invariants)
]

[tool.ruff.lint.isort]
# WHY: Ordering imports helps keep code diffs (differences) readable.
force-sort-within-sections = true

# === PER-FILE IGNORES (DEPENDS ON DOCSTRING POLICY) ===

[tool.ruff.lint.per-file-ignores]
# WHY: Some files must not be auto-modified.
"src/**/__init__.py" = ["F401"]     # Allow re-export patterns
"src/**/_version.py" = ["ALL"]      # Auto-generated file (do not lint)
"tests/**/*.py" = ["D", "B018", "B011", "S101"]
"src/**/py.typed" = ["ALL"]

# === CHOOSE PROJECT DOC STYLE ===

[tool.ruff.lint.pydocstyle]
# REQ: Google style is the project-wide docstring convention.
convention = "google"   # ALT: "numpy" choose one, never mix.

# ============================================================
# SECTION 3: BUILD SYSTEM (boilerplate; CUSTOM src/ agreement)
# ============================================================
#
# REQ.PROJECT: A build system MUST be declared for package discovery and publishing.
# REQ.STRUCTURE: All importable code MUST live under src/.
# WHY src/ layout: Prevents accidental imports from the repo root;
#     ensures consistent behavior across IDEs, tests, CI, and PyPI.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.hooks.vcs]
# WHY: Writes computed version into src/*/_version.py at build time.
# CUSTOM: Must match src/ folders.
version-file = "src/se_contract_kit/_version.py"

[tool.hatch.build.targets.wheel]
# CUSTOM: Must match src/ folders.
packages = ["src/se_contract_kit"]  # REQ.PACKAGES: Discovery rooted at src/.

[tool.hatch.build.targets.wheel.force-include]
# WHY: Package the repository manifest for runtime inspection.
"MANIFEST.toml" = "se_contract_kit/_contract/MANIFEST.toml"

[tool.hatch.metadata]
allow-direct-references = true # WHY: Allow direct references to git repos for dependencies, common in greenfield projects.

[tool.hatch.version]
# Used when no git tags present (fresh clone, CI). Keep in sync with CITATION.cff.
fallback-version = "0.1.0"
# WHY: Version derived from git tags at build time.
source = "vcs"
# WHY: Allow hatch-vcs to find the Git root when built from a subdirectory,
# temporary build directory, or isolated build env.
search_parent_directories = true
tag-pattern = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"
